<resources>
    <string name="app_name">LogLig</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="control_panel_action">Control Panel</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login_action">Log In</string>

    <string name="command">Command</string>
    <string name="current_statistic_container">Container for current statistic elements</string>
    <string name="current_statistic_element_player_image">Player image for current statistic</string>
    <string name="close_current_statistic_panel">close current statistic panel</string>
    <string name="init_timer">00:00</string>
    <string name="time_segment">Q#</string>
    <string name="statistic_default">STAT</string>
    <string name="number_default">##</string>
    <string name="timer_setup_for_time_segment">10:00</string>
    <string name="timer_setup_for_over_time_segment">05:00</string>
    <string name="timer_setup_for_0_0">00:00</string>
    <string name="live_scoring_app">LIVE - SCORING APP</string>
    <string name="forgot_password">   forgot password</string>
    <string name="team_foul">TFoul</string>
    <string name="timeout_0_3">T 0/3</string>
    <string name="end_game">End Game</string>
    <string name="_00_00">00-00</string>
    <string name="_0_0">0-0</string>
    <string name="ot">OT</string>
    <string name="team">Team</string>
    <string name="plus">+</string>
    <string name="player_full_name">Full Name</string>
    <string name="vs">vs</string>
    <string name="game_info_default">00:00 26/08/2016\nSami-Ofer</string>
    <string name="player_personal_statistic_points">##</string>
    <string name="statistics_plans">Statistics Plan</string>
    <string name="statistic_preset">Preset</string>
    <string name="minus">-</string>
    <string name="save_presets">Save Presets</string>
    <string name="start">Start</string>
    <string name="all">All</string>
    <string name="delete_set">Delete Set</string>
    <string name="add_set">Add Set</string>
    <string name="team_logo_on_game_selection_screen">Team Logo on game selection screen</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="game_settings">Game Settings</string>
    <string name="game_info">Game Info</string>
    <string name="tap_to_switch_player">Tap to switch player</string>
    <string name="empty_string"/>
    <string name="dialog_input">Dialog Input</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">Ok</string>

</resources>
