<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/current_statistic_panel_width"
    android:layout_height="@dimen/current_statistic_panel_height"
    android:background="@drawable/play_by_play_panel_effect"
    android:padding="@dimen/current_statistic_panel_padding">

    <!-- Player -->
    <TextView
        android:id="@+id/currPlayerNumber"
        android:layout_width="@dimen/current_statistic_type_item_width"
        android:layout_height="@dimen/current_statistic_item_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textColor="@color/colorLoginFont"
        android:textSize="@dimen/text_size_normal2"
        android:textStyle="bold"
        android:text="@string/number_default"/>

    <!-- Statistic Type -->
    <TextView
        android:id="@+id/currStatType"
        android:layout_width="@dimen/current_statistic_type_item_width"
        android:layout_height="@dimen/current_statistic_item_height"
        android:layout_marginBottom="@dimen/current_statistic_panel_padding"
        android:layout_marginLeft="@dimen/current_statistic_item_margin"
        android:layout_marginStart="@dimen/current_statistic_item_margin"
        android:layout_marginTop="@dimen/current_statistic_panel_padding"
        android:layout_toRightOf="@+id/currPlayerNumber"
        android:layout_toEndOf="@+id/currPlayerNumber"
        android:background="@drawable/statistic_type_neutral_border"
        android:gravity="center"
        android:text="@string/statistic_default"
        android:textColor="@color/colorLoginFont"
        android:textSize="@dimen/text_size_normal2"
        android:textStyle="bold" />

    <!-- Time Segment  -->
    <RelativeLayout
        android:id="@+id/currentStatTimeSegment"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/current_statistic_item_margin"
        android:layout_marginRight="@dimen/current_statistic_item_margin"
        android:layout_toLeftOf="@+id/closeButton"
        android:layout_toStartOf="@+id/closeButton"
        android:layout_toRightOf="@+id/currStatType"
        android:layout_toEndOf="@+id/currStatType">


        <TextView
            android:id="@+id/currentStatTimeSegmentText"
            android:layout_width="@dimen/player_info_width"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/time_segment"
            android:textColor="@color/colorLoginFont"
            android:textSize="@dimen/text_size_normal3" />

        <TextView
            android:id="@+id/currentStatTimeStampText"
            android:layout_width="@dimen/player_info_width"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/init_timer"
            android:textColor="@color/colorLoginFont"
            android:textSize="@dimen/text_size_normal3" />
    </RelativeLayout>

    <Button
        android:id="@+id/closeButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/close_button"
        android:contentDescription="@string/close_current_statistic_panel" />


</RelativeLayout>