<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBlack"
                android:padding="@dimen/padding_layout_normal">

    <ImageView
        android:id="@+id/promptImage"
        android:layout_width="@dimen/dialog_image_size"
        android:layout_height="@dimen/dialog_image_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/dialog_icon"/>

    <EditText
        android:id="@+id/promptInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/promptImage"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/promptImage"
        android:layout_toRightOf="@+id/promptImage"
        android:background="@color/colorNeutralStatistic"
        android:ems="15"
        android:gravity="center_vertical"
        android:hint="@string/dialog_input"
        android:padding="@dimen/padding_layout_normal"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/promptImage"
        android:layout_marginTop="@dimen/padding_in_dialog_layout"
        android:orientation="horizontal">

        <Button
            android:layout_marginRight="@dimen/padding_layout_normal"
            android:layout_marginEnd="@dimen/padding_layout_normal"
            android:id="@+id/dialogButtonCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/app_button_orange"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_normal"/>

        <Button
            android:layout_marginLeft="@dimen/padding_layout_normal"
            android:layout_marginStart="@dimen/padding_layout_normal"
            android:id="@+id/dialogButtonOK"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/app_button_orange"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_normal"/>

    </LinearLayout>

</RelativeLayout>